2012-05-10 belangeo <belangeo@gmail.com>

    * Added new object: Vocoder. Vocoder effect.
    - rev 972

2012-05-09 belangeo <belangeo@gmail.com>

    * Ensures that every example in the examples folder that don't need audio input have the duplex mode set to 0.
    - rev 971

2012-05-09 belangeo <belangeo@gmail.com>

    * Added new object: MatrixRecLoop. Records samples in loop into a previously created NewMatrix.
    - rev 970

2012-05-08 belangeo <belangeo@gmail.com>

    * Fixed issue 30. Lin/Exp/Cos/CurveTable compare size with last position in the list and increase size if needed.
    - rev 969

2012-05-08 belangeo <belangeo@gmail.com>

    * Added compiler flag --no-messages to suppress startup messages.
    - rev 968

-------------------------------------------------------------------------------------

2012-05-02 belangeo <belangeo@gmail.com>

    * rev 966 - Upgraded version number to 0.6.2, release tag: 0.6.1.

2012-04-28 belangeo <belangeo@gmail.com>

    * Added new function : convertStringToSysEncoding. For users who use non-ascii characters in their path.
    - rev 945

2012-04-13 belangeo <belangeo@gmail.com>

    * Added new object : NextTrig. A trigger opens a gate only for the next one.
    - rev 925

2012-04-13 belangeo <belangeo@gmail.com>

    * Added PyoObject.range(min, max) method. Adjust mul and add attributes.
    - rev 923

2012-04-13 belangeo <belangeo@gmail.com>

    * Added new object : Urn. Periodic pseudo-random integer generator without duplicates.
    - rev 922

2012-04-09 belangeo <belangeo@gmail.com>

    * Added new object : Count. Counts integers at audio rate.
    - rev 919

2012-04-06 belangeo <belangeo@gmail.com>

    * Added new object : OscListReceive. Handles list of floats from OSC as audio streams.
    - rev 914

2012-04-03 belangeo <belangeo@gmail.com>

    * Added functionalities to OSC objects (add, remove, setInterpolation, etc.).
    - rev 913
